--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=ep-rough-frog-a4fdaxzm.us-east-1.aws.neon.tech
+DB_PORT=5432
+DB_DATABASE=Special_Olympics
+DB_USERNAME=Special_Olympics_owner
+DB_PASSWORD=endpoint=ep-rough-frog-a4fdaxzm$gMrcAQqEj74s
+DB_SSLMODE=require
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
