Actualizando datos de conexion

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=${APP_URL}
+ASSET_URL=${APP_URL}
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +14,7 @@ DB_HOST=ep-rough-frog-a4fdaxzm.us-east-1.aws.neon.tech
 DB_PORT=5432
 DB_DATABASE=Special_Olympics
 DB_USERNAME=Special_Olympics_owner
-DB_PASSWORD=endpoint=ep-rough-frog-a4fdaxzm$gMrcAQqEj74s
+DB_PASSWORD=ep-rough-frog-a4fdaxzm
 DB_SSLMODE=require
 
 BROADCAST_DRIVER=log
