--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6o/ReLhHKD1JBfSr9oopY6qoodesYBd00E3DXRANorg=
 APP_DEBUG=true
 APP_URL=${APP_URL}
 ASSET_URL=${APP_URL}
@@ -58,3 +58,4 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+NIXPACKS_BUILD_CMD=composer install && php artisan optimize && php artisan config:cache && php artisan route:cache
