--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:6o/ReLhHKD1JBfSr9oopY6qoodesYBd00E3DXRANorg=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=${APP_URL}
-ASSET_URL=${APP_URL}
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=ep-rough-frog-a4fdaxzm.us-east-1.aws.neon.tech
-DB_PORT=5432
-DB_DATABASE=Special_Olympics
-DB_USERNAME=Special_Olympics_owner
-DB_PASSWORD=gMrcAQqEj74s
-DB_SSLMODE=require
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -58,4 +56,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
