chore: Update .env.example file with secure session cookie configuration

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
+SESSION_SECURE_COOKIE=true
+SESSION_SAME_SITE=none
