--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:6o/ReLhHKD1JBfSr9oopY6qoodesYBd00E3DXRANorg=
 APP_DEBUG=true
-APP_URL=${APP_URL}
+APP_URL=http://localhost
 ASSET_URL=${APP_URL}
 
 LOG_CHANNEL=stack
